@@ -1498,6 +1498,16 @@ server_main(struct nsd *nsd)
 		}
 		fsync(reload_listener.fd);
 		close(reload_listener.fd);
+		/* wait for reload to finish processing */
+		while(1) {
+			if(waitpid(reload_pid, NULL, 0) == -1) {
+				if(errno == EINTR) continue;
+				if(errno == ECHILD) break;
+				log_msg(LOG_ERR, "waitpid(reload %d): %s",
+					(int)reload_pid, strerror(errno));
+			}
+			break;
+		}
 	}
 	if(nsd->xfrd_listener->fd != -1) {
 		/* complete quit, stop xfrd */
@@ -1517,6 +1527,9 @@ server_main(struct nsd *nsd)
 #if 0 /* OS collects memory pages */
 	region_destroy(server_region);
 #endif
+	/* write the nsd.db to disk, wait for it to complete */
+	udb_base_sync(nsd->db->udb, 1);
+	udb_base_close(nsd->db->udb);
 	server_shutdown(nsd);
 }
 
